# ChangeLog for dev-libs/libffi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.195 2014/11/19 05:30:45 vapier Exp $

  19 Nov 2014; Mike Frysinger <vapier@gentoo.org> libffi-3.2.ebuild:
  Drop KEYWORDS until we can sort out #529044 a bit more.

*libffi-3.2 (12 Nov 2014)

  12 Nov 2014; Samuli Suominen <ssuominen@gentoo.org> +libffi-3.2.ebuild:
  Version bump.

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> libffi-3.0.13-r1.ebuild,
  libffi-3.1-r3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  22 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> -libffi-3.1-r2.ebuild:
  old

*libffi-3.1-r3 (30 May 2014)

  30 May 2014; Samuli Suominen <ssuominen@gentoo.org> +libffi-3.1-r3.ebuild,
  +files/libffi-3.1-typing_error.patch:
  Fix typing error in ffi.h.in (missing @@) wrt #511752 by Ryan Hill and
  Patrick Lauer

  29 May 2014; Samuli Suominen <ssuominen@gentoo.org> -libffi-3.1-r1.ebuild,
  -libffi-3.1.ebuild:
  old

*libffi-3.1-r2 (28 May 2014)

  28 May 2014; Samuli Suominen <ssuominen@gentoo.org> +libffi-3.1-r2.ebuild:
  Fix output of `pkg-config --libs libffi` wrt #511726 by Michał Górny

*libffi-3.1-r1 (28 May 2014)

  28 May 2014; Samuli Suominen <ssuominen@gentoo.org>
  +files/libffi-3.1-execstack.patch, +libffi-3.1-r1.ebuild:
  Fix execstack in libffi.so.6 wrt #511634 by Anthony Basile and Magnus Granberg

  27 May 2014; Samuli Suominen <ssuominen@gentoo.org>
  -files/libffi-3.0.11-x86-pic-check.patch, -libffi-3.0.11.ebuild,
  -libffi-3.0.12.ebuild, -libffi-3.0.13.ebuild:
  old

  27 May 2014; Samuli Suominen <ssuominen@gentoo.org> libffi-3.1.ebuild:
  Time to let preserve_old_lib go and rely upon FEATURES="preserved-libs" which
  is enabled by default in the official package manager.

*libffi-3.1 (27 May 2014)

  27 May 2014; Samuli Suominen <ssuominen@gentoo.org> +libffi-3.1.ebuild:
  Version bump.
