@@ -1,11 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX libffi-3.0.13-emutramp_pax_proc.patch 911 SHA256 955aa3d87522cb220133fa853bd3a5a7af1fe7cf5cc6b9eb74ffffb9ac563aba SHA512 402712b21feec0f162758adad630ecc588596eaebd2e79bb86802f313e102b8ef6d08eca0580a1aae25dabec3e018c499e2ce1960edc6af9182f67cd8cc9b0e1 WHIRLPOOL 22f76ca6f909c80228958115a8db37fbe5f12e291cdbc1fad672a0903c54a7918e2cee37fdc263e9c350f3c79a7870cc8f7a05789668a8dc87cb8434a6e20f9c
 AUX libffi-3.1-execstack.patch 277 SHA256 55e95096d8b2bd82188c62b1316c602738336c0a4b58ccce503936dfc436b1d9 SHA512 1365cb102e6ffacd89b399243cd89ddb29259e373d16fd500d9d98bd40edbd0d79b63df6fb9464247cc2f11628d5c692a25f1c6d9cef19feb857e1232c154d4f WHIRLPOOL 597c3cdb8a28dcc15d724fa4d184956bcd4118803070ba63c1d914eb1a3b4c9720f68404a05ba4ad7ad83714f79ee7856bb8921886511bc7d35b39f33b4b41f0
 AUX libffi-3.1-typing_error.patch 350 SHA256 2e134e7f347f392499ec9128b220cff467919dfc048922d72689816d9f40ea95 SHA512 6be05ec604da587ded9d50ba57153b7ca24ee52dbed132d08f8653032153d377b2e399b58010e3c84e2106f077696a0cc9507018687af2082aa5ce055ba5fa07 WHIRLPOOL e8613594118774abaa2d79b0cdcbfd57d1c3ca275543423cec70b368e604c78bc7162d582a5b654b378b60a1d765a12b418bd10f8a8693ccbc3e7fdf225be216
 DIST libffi-3.0.13.tar.gz 845747 SHA256 1dddde1400c3bcb7749d398071af88c3e4754058d2d4c0b3696c2f82dc5cf11c SHA512 fc47f5d25197c631754efe05a349edb556d072807ecef19b41f17c1a8f39c95221be64926fbd05b1f8439181df1ddff8fc01462ce3a26005b75159ddc27e6f6a WHIRLPOOL d5b14d48a7b35f7349ec938d0deac62db7022ac4d611ab13bc7a6a2766a47e210fc1663fc8c6d7ee48d421c06b66f558010829ac2c215620c76d0bf7650e1308
 DIST libffi-3.1.tar.gz 937214 SHA256 97feeeadca5e21870fa4433bc953d1b3af3f698d5df8a428f68b73cd60aef6eb SHA512 8994973d75facf5ad928c270e17b1a56e24d1543af75b93731a0048e747df27e4190a736b6dc2dca7d43de1d7e88891220304802c10fcccdcebee9c9ffd3d1b9 WHIRLPOOL 19c08cffd39c998fcd762b1e3767b4fd86915427226833411302bebd2d5bcf93d515e6df4a4cab11327595d3966e46442e457fbe09ae986b58bdfb2bb6adb913
+DIST libffi-3.2.1.tar.gz 940837 SHA256 d06ebb8e1d9a22d19e38d63fdb83954253f39bedc5d46232a05645685722ca37 SHA512 980ca30a8d76f963fca722432b1fe5af77d7a4e4d2eac5144fbc5374d4c596609a293440573f4294207e1bdd9fda80ad1e1cafb2ffb543df5a275bc3bd546483 WHIRLPOOL b9d3c86e347029fa9f03fd3813405cc731099812ad6186bd4d2ea646354383803c90912b20e1804a6b7fc12719403b3c0c3b800bdbcab564a2c93fcb4fd722ad
 DIST libffi-3.2.tar.gz 940691 SHA256 6b2680fbf6ae9c2381d381248705857de22e05bae191889298f8e6bfb2ded4ef SHA512 fed5f6eec86144608966857f54bd69a5faa43427f27bc9178ebe2c7a1cecf925c20dbd6df07a207ae469842874efcf5b99fb7e09db59cbd92ebfc0a7e1bb62b7 WHIRLPOOL db7491bc5914eb6691aa366677c63af51979453330373251b1043b53163d1b56dbed65ba23c9f5047257e476e0d216045a06faa346790987047854ae1d04361d
 EBUILD libffi-3.0.13-r1.ebuild 2289 SHA256 44d26db4026bebca8d95f048fb947f48950e62116e797bdc429ffa429020e705 SHA512 ef2c6118a69e9d422160e3daadb9581f8faf8710ce27f675a13312c8e4c257d4df18a6d6b30b9864c152cbb5819099261374f53cef47a34b7f0b74c791580d5a WHIRLPOOL 33e06c242f0e338f7355ec9257ff8f89d7ccd89a6413465c605b04c9548713a9a8f70da5aa328cf52116b52acabfa92f1ede199eba8b4d286f0b894d2856c44c
 EBUILD libffi-3.1-r3.ebuild 2302 SHA256 01ebb6d8ed08b2d20c2ed2d7bedd2c467843df6b58ecdb39d8051820cef4ab61 SHA512 c2af031a827eec65f1b733269b62ca304636a4e4b8dea3e8a69c854303a30945b6bc6125b0e43c76174562c134c660debce756127d1ecbf2d11b1e15364e7675 WHIRLPOOL 3a4c19076ab58b109ab9f5df349c24f040b9f1ca8f8d043acbd0fd421bbb431fd0652589b038ab1810a630e47fd6cd585353637b8777cf124b033e189f5bd4f3
+EBUILD libffi-3.2.1.ebuild 2138 SHA256 4a235218ee7e8d99e3fcb3489d09460aefee642aa302c86a5541773351de7400 SHA512 be2d3265a912453f85bc8c3a8d53aa63f678a4049a5c4a6093a05a93d947f412353e58e2002d92e13b04b6fa122df46205f7cbf1ac9e949fb8e5a4f01014a6be WHIRLPOOL 0f5b8170fc4a262dfbcfb92fa2503e956c164a5af5047eff50b6cc77eab09520e6fd485dae03937587b17046ae150c129924768d35287537b53f341627f09ebc
 EBUILD libffi-3.2.ebuild 2134 SHA256 521c38c62a9820ab4d50bf2cd54f1eaaf9f4081de992d56ea54e598522f54d67 SHA512 b97d2ddae80d8bba97c5ad9f257b103c598a7b66afdb31bcc248f6a00637d10c08bcdfec2e7ff14304bc28ee5581db2f5507909208001f585b5340f6b1b23e83 WHIRLPOOL 717dc2525f5f0b7d5d0220ce5dada2a5d89e098fa23fc1f69d7c33295722208310c1a494d37cc1df35276fe94a9579f5a691fe5093b0d2d66d38be0b878692a0
-MISC ChangeLog 26328 SHA256 d6b983fec3063f00586dc355d414447c0ab85058e9bf53e80a316eb893e31890 SHA512 3353581cd383894fc45cdfce8525154e53c354b34387acfda2bab80c3c89ab05242dc88a49be8256096b7fec60754d749ea168f19cefc7613c32e861f61ba816 WHIRLPOOL 07122931e45bbf811200b048dd69e5fcc035288bcb24a51e616a43f58d879b15056960a7b711a6f43b44c0e03484b069e8dc8e7dff5e104afa417a7b22a2ad36
+MISC ChangeLog 26448 SHA256 968b8034a96aab7c80f73a7d9f3b75a5c204b568ea903fa46c9bc338a1137a38 SHA512 69adc574f515cb62f4c8917194156bf54fc914e8aaaeca0cc965a3e62152b7d98fd44e59c7a5d47aa1feacf37918572b14f2d32b0d8db86a666b003332b981da WHIRLPOOL 4610703e31861c9e75f6c85ba2e53b088c8d98c681945d6e3eea933a0cc61c64b2cc740dcf4387a28800dcea4b501e22f990feeb5c5bac79edf037438103cd11
 MISC metadata.xml 1768 SHA256 1bb92578368c006819d0cd5e1a94d32cffca87ddef8d571c29b483bedddc9b6e SHA512 2291c051ce2cb5c31989af68a705c0f8ce8d6ff23f2a66f839463a56a20454a6af276c5afc75687919e14fa614862356618e44c88415ff9884725e6e6db161bc WHIRLPOOL 7da7a437bf11dfcd5b5a8fbb067463ceb588fe83c1db0d15253293a955999d5dc65754918c73840a9a5020f86d1b6f1c9f8d127f4e1519594bc0678742727d45
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlSBVI4ACgkQblQW9DDEZTgfCQCfVH9QicHcoETp+8K5qiez91aF
+mtwAoJ0BzhkgfVOQUpVAjLfMiXPcEobx
+=/N1/
+-----END PGP SIGNATURE-----
