@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libffi
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.195 2014/11/19 05:30:45 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.196 2014/12/05 06:45:22 williamh Exp $
+
+*libffi-3.2.1 (05 Dec 2014)
+
+  05 Dec 2014; William Hubbs <williamh@gentoo.org> +libffi-3.2.1.ebuild:
+  version bump
 
   19 Nov 2014; Mike Frysinger <vapier@gentoo.org> libffi-3.2.ebuild:
   Drop KEYWORDS until we can sort out #529044 a bit more.
